fixed the instruments section to span 3 columns instead of 4. In result a horizontal scroll showed up on the coins. I showed it to nasim and she said to remove the scroller and make it wrap to the next line. and change the coin fonts back to 12px instead of 14px

--- a/src/app/feature/components/ddx-instruments/ddx-instruments.component.scss
+++ b/src/app/feature/components/ddx-instruments/ddx-instruments.component.scss
@@ -26,11 +26,12 @@
         width: 100%;
         overflow-x: auto;
         align-items: center;
+        flex-wrap: wrap;
 
         .instruments-header__currency {
           @extend .button-primary;
           @extend .button-short;
-          @extend .body;
+          @extend .caption-small;
 
           margin-right: 3px;
           display: flex;
