--- a/src/app/feature/pages/ddx-home-page/ddx-home-page.component.scss
+++ b/src/app/feature/pages/ddx-home-page/ddx-home-page.component.scss
@@ -64,10 +64,10 @@
       'my-orders-section sale-section';
 
     section.chart-section {
-      grid-column: 1 / 9;
+      grid-column: 1 / 10;
     }
     section.instruments-section {
-      grid-column: 9 / 13;
+      grid-column: 10 / 13;
     }
 
     section.order-book-section {
